tests/compile-errors/src/unsupported-type.stderr
error: proc macro panicked
  --> src/unsupported-type.rs:15:1
   |
15 | usdt::dtrace_provider!("../../../tests/compile-errors/providers/unsupported-type.d");
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: message: Could not read D source file "../../../tests/compile-errors/providers/unsupported-type.d" in "$WORKSPACE/target/tests/trybuild/compile-errors"

error[E0433]: failed to resolve: use of undeclared crate or module `unsupported`
  --> src/unsupported-type.rs:19:5
   |
19 |     unsupported::bad!(|| (bad));
   |     ^^^^^^^^^^^ use of undeclared crate or module `unsupported`
